# Complete-Agentic-AI-Step-by-Step

./: .env  main.py  pyproject.toml  requirements.txt
1-Python Basics/: 1.0-basic.ipynb  1.1-Variables.ipynb  1.2-Datatypes.ipynb  1.3-operators.ipynb
10-Data Analysis With Python/: 10.2-pandas.ipynb
2-Control Flow/: Conditionalstatements.ipynb  Loops.ipynb
3-Data Structures/: 3.1-Lists.ipynb  3.1.1-ListExamples.ipynb  3.2-Tuples.ipynb  3.3-Sets.ipynb  3.4-Dictionaries.ipynb
4-Functions/: 4.1-functions.ipynb  4.2-examplesfunctions.ipynb  4.3-Lambda.ipynb  4.4-Mapsfunction.ipynb  4.5-filterfunction.ipynb  sample.txt
5-Modules/: 5.1-import.ipynb  5.2-Standardlibrary.ipynb
6-File Handling/: 6.1-fileoperation.ipynb
7-Exception Handling/: 7.1-exception.ipynb
8-Class And Objects/: 8.1-oops.ipynb  8.2-inheritance.ipynb  8.3-Polymorphism.ipynb
9-Advance Python Concepts/: 9.1-Iterators.ipynb  9.2-Generators.ipynb
