[project]
name = "complete-agentic-ai-step-by-step"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.4",
    "langsmith>=0.7.23",
    "python-dotenv>=1.2.2",
]
